# dnsviz-tui

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dnsviz_tui/: __init__.py  __main__.py  app.py
src/dnsviz_tui/dns/: __init__.py  dnssec.py  records.py  resolver.py
src/dnsviz_tui/export/: __init__.py  json_export.py  text_export.py
src/dnsviz_tui/models/: __init__.py  chain.py
src/dnsviz_tui/views/: __init__.py  diagram_view.py  table_view.py  tree_view.py
src/dnsviz_tui/widgets/: __init__.py  domain_input.py  history_panel.py  status_bar.py
tests/: __init__.py
