[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnsviz-tui"
version = "0.1.0"
description = "A TUI application for visualizing DNSSEC chain of trust"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ashawyer" }
]
keywords = ["dns", "dnssec", "tui", "security", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
]
dependencies = [
    "textual>=0.50.0",
    "dnspython>=2.6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dnsviz-tui = "dnsviz_tui.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dnsviz_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
